--- a/sites/all/themes/baksdrap/css/global.css
+++ b/sites/all/themes/baksdrap/css/global.css
@@ -4,7 +4,8 @@
 body{
 background-color:#9BF01B;
 font-family:"Adobe Caslon Pro", "Hoefler Text", Georgia, Garamond, Times, serif;
-font-size:14pt;
+font-size:12pt;
+color:#1a1a1a;
 
 }
 
@@ -19,20 +20,14 @@ background-color:#493829;
 
 h1, h2,
 h1.site-name a.active {
-	color: #FBB6A4 !important;
+	color: #1a1a1a !important;
 }
 
 article#node-page-2 a {
 	font-size: 300%;
-	margin: 100px;
+	padding: 100px;
 }
 
 article#node-page-2 {
 	text-align: center !important;
-}
-
-a[href="/?q=map-anon"],
-a[href="/?q=user"],
-h2 {
-	color: #222 !important;
 }
